Removed unused dependencies, Added set converters

--- a/set_mappings/sv_set_mappings.json
+++ b/set_mappings/sv_set_mappings.json
@@ -16,7 +16,7 @@
     },
     {
         "name": "Scarlet & Violet - 151",
-        "code": "MEw",  
+        "code": "MEW",  
         "id": "sv3.5"
     },
     {
