--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.21", features = ["derive"] }
+ntest = "0.9.3"
 regex = "1.11.1"
 reqwest = { version = "0.12.9", features = ["json"] }
 serde = { version = "1.0.215", features =["derive"] }
