--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+pokemon_tcg_sdk = { path = "../pokemon_tcg_sdk"}
 clap = { version = "4.5.21", features = ["derive"] }
-ntest = "0.9.3"
-regex = "1.11.1"
-reqwest = { version = "0.12.9", features = ["json"] }
 serde = { version = "1.0.215", features =["derive"] }
 serde_json = "1.0.135"
-tokio = { version="1.41.1", features=["full"]}
+tokio = { version="1.41.1", features=["full"] }
+regex = "1.11.1"
