--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serde = { version = "1.0.215", features =["derive"] }
 serde_json = "1.0.135"
 tokio = { version="1.41.1", features=["full"] }
 regex = "1.11.1"
+chrono = "0.4.39"
