--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
 pokemon_tcg_sdk = { path = "../pokemon_tcg_sdk"}
 clap = { version = "4.5.21", features = ["derive"] }
 serde = { version = "1.0.215", features =["derive"] }
@@ -11,3 +12,7 @@ serde_json = "1.0.135"
 tokio = { version="1.41.1", features=["full"] }
 regex = "1.11.1"
 chrono = "0.4.39"
+dotenv = "0.15.0"
+
+[profile.dev.package.sqlx-macros]
+opt-level = 3
