--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+pokemon_tcg_sdk_rs = "0.1.0"
 sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
-pokemon_tcg_sdk = { path = "../pokemon_tcg_sdk"}
 clap = { version = "4.5.21", features = ["derive"] }
 serde = { version = "1.0.215", features =["derive"] }
 serde_json = "1.0.135"
