--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,23 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-pokemon_tcg_sdk_rs = "0.1.0"
-sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
-clap = { version = "4.5.21", features = ["derive"] }
-serde = { version = "1.0.215", features =["derive"] }
-serde_json = "1.0.135"
-tokio = { version="1.41.1", features=["full"] }
-regex = "1.11.1"
-chrono = "0.4.39"
-dotenv = "0.15.0"
+#pokemon_tcg_sdk_rs = "0.1.0"
+#sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
+#clap = { version = "4.5.21", features = ["derive"] }
+#serde = { version = "1.0.215", features =["derive"] }
+#serde_json = "1.0.135"
+#tokio = { version="1.41.1", features=["full"] }
+#regex = "1.11.1"
+# chrono = "0.4.39"
+#dotenv = "0.15.0"
+leptos = { version = "0.8", features=["csr"]}
+console_error_panic_hook = "0.1"
+log = "0.4"
+
+[dev-dependencies]
+wasm-bindgen = "0.2.93"
+wasm-bindgen-test = "0.3.42"
+web-sys = "0.3.70"
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
